2008-04-13  David Hyatt  <hyatt@apple.com>

        Fix build bustage on the filters SVG code path (not built by default).

        * svg/SVGFEImageElement.cpp:
        (WebCore::SVGFEImageElement::~SVGFEImageElement):
        (WebCore::SVGFEImageElement::parseMappedAttribute):

2008-04-13  Dan Winship  <danw@gnome.org>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18391
        return body data incrementally from libsoup backend

        Fix libsoup backend to pass data to the loader incrementally
        rather than all at once at the end.

        * platform/network/soup/ResourceHandleSoup.cpp
        (ResourceHandle::start): connect to "got-headers" and "got-chunk"
        signals on the message
        (gotHeadersCallback): call client->didReceiveResponse() from here
        (gotChunkCallback): call client->didReceiveData() from here
        (finishedCallback): renamed from dataCallback. mostly just calls
        client->didFinishLoading() now.

2008-04-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Jessica Kahn.

        - remove duplicate condition in canHaveChildrenForEditing()

        * editing/htmlediting.cpp:
        (WebCore::canHaveChildrenForEditing):

2008-04-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=18307
          <rdar://problem/5842546> REGRESSION (r31620): Incorrect Hiragino Kaku Gothic, font-weight:500

        Test: fast/css/font-weight-1.html

        * platform/graphics/mac/FontCacheMac.mm:
        (WebCore::toAppKitFontWeight): Adjusted the mapping to cover the AppKit
        weight range from 2 to 12, because AppKit weight 1 never occurs. The
        new mapping matches font-weight: n00 to ISO weight Wn.
        * platform/mac/WebFontCache.mm:
        (betterChoice): Changed the midpoint used when deciding between two
        candidates that deviate from the desired weight by the same amount.
